--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,6 @@ h3 {
     border-top: 5px #FBEF6B solid;
     border-bottom: 5px #81CBC6 solid;
     text-align:center;
-    max-width:960px;
 }
 #favorite-sites > col-4 > img {
     list-style-type:none;
@@ -182,6 +181,9 @@ h3 {
     padding:40px;
     display: flex;
     justify-content: space-around;
+}
+#favorite-sites > img {
+    width:200px;
 }
 footer { 
     background-color: #fff;
@@ -194,4 +196,8 @@ footer > h1 {
 .max-width {
     margin:0 auto;
     max-width:960px;
+}
+/*Bootstrap Related*/
+.container-fluid {
+    padding:0;
 }
