--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
  /*
 COLORS
-pale blue: #99B2D4
-purple: #904BC9
-tourquiose:#81CBC6
-pale yellow: #FBEF6B
+pale blue: #99B9C4
+purple: #902BC9
+tourquiose:#81CFC6
+pale yellow: #FDEF9C
 deep red: #9B2D40
 */
 
@@ -18,7 +18,6 @@ body {
     background-color: none;
     min-height: 80px;
 }
-
 #header > h1 {
     margin: 0;
     text-align: center;
@@ -31,13 +30,11 @@ body {
     min-height: 80px;
     height: auto;
 }
-
 #nav > ul {
     text-align: center;
     padding: 15px, 0, 15px, 0;
     margin: 0;
 }
-
 #nav > ul > button {
     min-width: 178px;
     color: white;
@@ -47,7 +44,6 @@ body {
     transition: background-color .25s;
     border-bottom: 2px solid #904bc9;
 }
-
 #nav > ul > button:hover {
     background-color: #99B2D4;
 }
@@ -73,22 +69,20 @@ body {
 .side-by-side {
     display: flex;
 }
+
 #main-content-wrapper {
     background-color: #fff;
 }
-
 #main-content-wrapper .image-content {
     text-align:center;
     margin-top:50px;
     margin:0 auto;
 }
-
 .image-content > img {
     max-width: 200px;
     border-radius: 100px;
     margin-top: 50px;
 }
-
 .image-content > h2 {
     font-weight: 300;
     color: #904BC9;
@@ -96,7 +90,7 @@ body {
 .image-content > h2 > a {
     color: #904BC9; 
     border:none; 
-    padding: auto;
+    padding:auto;
     transition:color .25s;
 }
 .image-content > h2 > a:hover {
@@ -108,26 +102,21 @@ body {
     margin-top:50px;
     margin-bottom: 50px;
 }
-
 h3 {
     text-align:center;
 }
-
 #main-content-wrapper article h4 {
     text-align: center;
 }
-
 #main-content-wrapper article p {
     max-width:300px;
     margin: 0 auto;
 }
-
 #main-content-wrapper #skills {
     text-align: center;
     font-weight: 300;
     letter-spacing: 2px;
 }
-
 #main-content-wrapper #skills span {
     font-weight: 400;
 }
@@ -140,22 +129,20 @@ h3 {
 #aside-right {
     width:200px;
 }
-
 #aside-right h5 {
     text-align: center;
     padding-top:80px;
 }
+
 #latest-work {
     list-style-type: none;
 }
-
 #latest-work > li {
     padding-top: 15px;
     padding-bottom: 15px;
     width: 100%;
     border-bottom: 1px black solid;
 }
-
 #latest-work > li:before {
     content: "";
     border-color: transparent;
@@ -175,29 +162,43 @@ h3 {
     border-bottom: 5px #81CBC6 solid;
     text-align:center;
 }
-#favorite-sites > col-4 > img {
+
+
+#favorite-sites > .col-md-4 > img {
     list-style-type:none;
     margin: 0;
     padding:40px;
     display: flex;
     justify-content: space-around;
+    text-align:center;
+
+
+/* (Don't understand why sizes don't change)
+
+#favorite-sites > .row > .column-md-4 > img {
+    margin: 0 auto;
 }
-#favorite-sites > img {
-    width:200px;
+#favorite-sites > column-md-4 > .row {
+    max-width:200px;
 }
+*/
 footer { 
     background-color: #fff;
     text-align:center;
+    margin-top: 10px;
+    margin-bottom:10px;
 }
 footer > h1 {
     margin: 0;
     transform:translateY(50%);
 }
+/*
 .max-width {
     margin:0 auto;
     max-width:960px;
 }
+*/
 /*Bootstrap Related*/
 .container-fluid {
-    padding:0;
+    padding: 0;
 }
